# Descent-Mobile

./: .gitignore  .gitlab-ci.yml  COPYING  README.md  build.gradle  settings.gradle
2D/: BITBLT.C  BITMAP.C  BOX.C  CANVAS.C  EFFECT2D.H  FONT.C  GR.C  GR.H  IBITBLT.C  LBITBLT.C  LINE.C  LINEAR.C  LINEARC.C  MEDIAN.C  MODEXC.C  PALETTE.C  PCX.C  PCX.H  POLY.C  RECT.C  RLE.C  RLE.H  ROLLER.C  SCALE.C  SCANLINE.C  VESA.C  VESALIB.C  bitblt.c  bitmap.c  gr.h  grdef.h  ibitblt.c  modex.c  modexc.c  palette.c  palette.h  tpoly.c
2d/: CMakeLists.txt  bitblt.c  bitmap.c  circle.c  disc.c  effects.c  gpixel.c  gr.c  lbitblt.c  linear.c  pixel.c  rect.c  rle.c  scale.c  scanline.c
2d/2d.xcodeproj/: project.pbxproj
2d/ogles/: CMakeLists.txt  bitbltogles.c  fontogles.c  scaleogles.c
3D/: 3D.H  CLIPPER.C  CLIPPER.H  DRAW.C  GLOBVARS.C  GLOBVARS.H  MATRIX.C  ROD.C  SETUP.C  draw.c  interp.c  matrix.c  points.c  rod.c  setup.c
3d/: CMakeLists.txt  instance.c  matrix.c
CFILE/: CFILE.C  CFILE.H  cfile.h
Descent/: AppDelegate.h  AppDelegate.m  ControlsView.h  ControlsView.m  Info.plist  Motion.h  Motion.m  Music.m  RenderView.h  RenderView.m  ViewController.h  ViewController.m  ViewControllerC.h  ViewControllerC.m  build.gradle  main.m
Descent-Mobile.xcworkspace/: contents.xcworkspacedata
Descent-iOS.xcworkspace/: contents.xcworkspacedata
Descent/src/main/cpp/: CMakeLists.txt  controls.c  keyboard.c  main.c  motion.c  render.c
FIX/: fix.h  tables.c
IFF/: IFF.C  iff.c
IO/: DPMI.C  DPMI.H  IPX.C  JOY.C  KEY.C  MOUSE.C  TIMER.C  TIMER.H  dpmi.c  i86.h  key.h  mouse.c
LIB/: 3D.H  3d.h  BM.H  DIGI.H  DIV0.H  DPMI.H  GRDEF.H  LZW.H  NO_SOS.H  OBJECT.H  PIGGY.H  PLAYER.H  SHIP.H  TEXTURES.H  TIMER.H  ViewControllerC.h  cflib.h  clip.h  compbit.h  config.h  desc_id.h  digi.h  dpmi.h  dstring.h  effects.h  endlevel.h  error.h  fireball.h  fix.h  fvi.h  game.h  gauges.h  gr.h  ibitblt.h  inferno.h  ipx.h  joy.h  kconfig.h  key.h  morph.h  (+24 more)
MAIN/: AI.C  ARGS.C  AUTOMAP.C  BM.C  BM.H  BMREAD.C  CNTRLCEN.C  COLLIDE.C  COLLIDE.H  CONFIG.C  CONTROLS.C  CREDITS.C  DIGI.C  DIGI.H  EFFECTS.C  EFFECTS.H  EHOSTAGE.H  ENDLEVEL.C  EOBJECT.C  ESWITCH.C  ESWITCH.H  FIREBALL.C  FUELCEN.C  FVI.C  GAME.C  GAMEFONT.C  GAMEMINE.C  GAMESAVE.C  GAMESEQ.C  GAUGES.C  HMP.C  HMP.H  HOSTAGE.C  INFERNO.C  JOYDEFS.H  KCONFIG.C  KCONFIG.H  KMATRIX.H  LASER.C  LIGHTING.C  (+94 more)
MEM/: MEM.C  mem.c
MISC/: BYTESWAP.C  BYTESWAP.H  DSTRING.c
TEXMAP/: NTMAP.C  SCANLINE.H  texmapl.h  tmapflat.c
UI/: BARBOX.C  BUTTON.C  CHECKBOX.C  FILE.C  ICON.C  INPUTBOX.C  KEYPAD.C  KEYPRESS.C  KEYTRAP.C  LISTBOX.C  MENU.C  MENUBAR.C  MESSAGE.C  MOUSE.C  POPUP.C  RADIO.C  SCROLL.C  UI.C  UIDRAW.C  USERBOX.C  WINDOW.C
VECMAT/: VECMATC.C
cfile/: CMakeLists.txt  cfile.c
fix/: CMakeLists.txt  (+1 more)
main/: CMakeLists.txt  ai.c  bmread.c  collide.c  endlevel.c  fvi.c  game.c  gameseq.c  gauges.c  hmp.c  hud.c  iglasses.c  kconfig.c  lightning.c  menu.c  modem.c  morph.c  multi.c  network.c  newmenu.c  object.c  physics.c  playsave.c  polyobj.c  render.c  robot.c  scores.c  terrain.c  titles.c
main/android/: CMakeLists.txt  digi.c
main/ios/: digi.c  hmp.c
main/main.xcodeproj/: project.pbxproj
(+123 files in other folders)
