add_subdirectory(android)

set(SOURCES
		ai.c
		aipath.c
		args.c
		automap.c
		bm.c
		bmread.c
		cntrlcen.c
		collide.c
		config.c
		controls.c
		credits.c
		dumpmine.c
		effects.c
		endlevel.c
		escort.c
		fireball.c
		fuelcen.c
		fvi.c
		game.c
		gamefont.c
		gamemine.c
		gamesave.c
		gameseg.c
		gameseq.c
		gauges.c
		hash.c
		hmp.c
		hostage.c
		hud.c
		iglasses.c
		inferno.c
		joycal.c
		joydefs.c
		kconfig.c
		kmatrix.c
		laser.c
		lightning.c
		mcockpit.c
		menu.c
		mglobal.c
		mission.c
		modem.c
		morph.c
		multibot.c
		multi.c
		netmisc.c
		network.c
		newdemo.c
		newmenu.c
		object.c
		paging.c
		physics.c
		piggy.c
		playsave.c
		polyobj.c
		powerup.c
		render.c
		robot.c
		scores.c
		serial.c
		slew.c
		songs.c
		state.c
		switch.c
		terrain.c
		testgaug.c
		texmerge.c
		text.c
		titles.c
		vclip.c
		vfx.c
		victor.c
		wall.c
		weapon.c
)

add_library(main STATIC ${SOURCES})
